tree-sitter-outrun/grammar.js
    source_file: $ => repeat($.item),

    // Top-level items
    item: $ => choice(
      $.struct_definition,
      $.trait_definition,
      $.impl_block,
      $.function_definition,
      $.constant_definition,
      $.let_binding,
      $.alias_definition,
      $.macro_definition,
      $.import_definition
    ),

    // Comments
    function_definition: $ => seq(
      repeat($.attribute),
      choice('def', 'defp'),
      $.identifier,
      '(',
      optional($.parameter_list),
      ')',
      optional($.return_type),
      optional($.guard_clause),
      $.block
    ),

    parameter_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(',')
    ),

    parameter: $ => seq(
      $.identifier,
      ':',
      $.type_annotation
    ),

    return_type: $ => seq(':', $.type_annotation),

    // Guard System
    guard_expression: $ => choice(
      $.expression,
      $.binary_guard_expression,
      seq('(', $.guard_expression, ')')
    ),

    generic_args: $ => seq(
      '<',
      $.type_annotation,
      repeat(seq(',', $.type_annotation)),
      optional(','),
      '>'
    ),

    // Types
    type_annotation: $ => choice(
      seq($.module_path, optional($.generic_args)),
      $.tuple_type,
      $.function_type,
      'Self'
    ),

    module_path: $ => seq(
      $.type_identifier,
      repeat(seq('.', $.type_identifier))
    ),

    // Macro Definition
    expression: $ => $._pipe_expression,

    _pipe_expression: $ => prec.left(1, choice(
      $._logical_or_expression,
      $.pipe_expression
    )),

    _equality_expression: $ => prec.left(4, choice(
      $._comparison_expression,
      $.binary_equal,
      $.binary_not_equal
    )),

    binary_equal: $ => prec.left(4, seq($._equality_expression, '==', $._comparison_expression)),
    _comparison_expression: $ => prec.left(5, choice(
      $._bitwise_or_expression,
      $.binary_greater,
      $.binary_greater_equal,
      $.binary_less,
      $.binary_less_equal
    )),

    binary_greater: $ => prec.left(5, seq($._comparison_expression, '>', $._bitwise_or_expression)),
    _bitwise_or_expression: $ => prec.left(6, choice(
      $._bitwise_xor_expression,
      $.binary_bitwise_or
    )),

    function_call: $ => prec(1, seq(
      optional(seq($.module_path, '.')),
      $.identifier,
      '(',
      optional($.argument_list),
      ')'
    )),
    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.module_path,
      $.function_call,
      $.function_capture,
      seq('(', $.expression, ')'),
      $.if_expression,
      $.case_expression,
      $.anonymous_function,
      $.struct_literal,
      $.list_literal,
      $.tuple_literal,
      $.map_literal,
      $.macro_injection
    ),

    argument_list: $ => seq(
      $.argument,
      repeat(seq(',', $.argument)),
      optional(',')
    ),

    argument: $ => choice(
      $.spread_argument,
      $.named_argument,
      $.shorthand_argument
    ),

    named_argument: $ => seq(
      $.identifier,
      ':',
      $.expression
    ),

    shorthand_argument: $ => $.identifier,

    // Literals
    literal: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.multiline_string,
      $.atom,
      $.sigil,
      $.boolean
    ),

    integer: $ => choice(
      /[0-9]+/,                    // Decimal
      /0b[01]+/,                   // Binary
      /0o[0-7]+/,                  // Octal
      /0x[0-9a-fA-F]+/            // Hexadecimal
    ),

    float: $ => /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,

    string: $ => seq(
      '"',
      repeat(choice(
        $.interpolation,
        $.escape_sequence,
        $.string_content
      )),
      '"'
    ),

    string_content: $ => token.immediate(/[^"\\#]+/),
    
    multiline_string: $ => seq(
      '"""',
      repeat(choice(
        $.multiline_string_content,
        $.interpolation
      )),
      '"""'
    ),

    multiline_string_content: $ => token.immediate(/[^#"]+|"[^"]*"|""[^"]/),

    atom: $ => seq(
      ':',
      choice(
        $.identifier,
        $.string
      )
    ),

    boolean: $ => choice('true', 'false'),

    // Collection Literals
    list_literal: $ => seq(
      '[',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(',')
      )),
      ']'
    ),

    map_literal: $ => seq(
      '{',
      optional(seq(
        $.map_entry,
        repeat(seq(',', $.map_entry)),
        optional(',')
      )),
      '}'
    ),

    map_entry: $ => choice(
      $.map_key_value_pair,
      $.map_shorthand_pair
    ),

    map_shorthand_pair: $ => prec(2, seq(
      choice($.identifier, $.string),
      ':',
      $.expression
    )),

    // Struct Literals
    struct_literal: $ => prec(1, seq(
      $.module_path,
      '{',
      optional($.struct_literal_fields),
      '}'
    )),

    struct_literal_fields: $ => choice(
      seq(
        $.struct_literal_field,
        repeat(seq(',', $.struct_literal_field)),
        optional(','),
        optional(seq(',', $.struct_update))
      ),
      $.struct_update
    ),

    struct_literal_field: $ => choice(
      $.struct_field_assignment,
      $.struct_field_shorthand
    ),

    struct_field_assignment: $ => seq(
      $.identifier,
      ':',
      $.expression
    ),

    case_expression: $ => seq(
      'case',
      $.expression,
      '{',
      repeat($.case_clause),
      optional($.else_clause),
      '}'
    ),

    case_clause: $ => seq(
      $.case_pattern,
      '->',
      choice($.expression, $.block)
    ),

    case_pattern: $ => seq('when', $.guard_expression),

    else_clause: $ => seq(
      'else',
      '->',
      choice($.expression, $.block)
    ),

    // Statements
    block: $ => seq('{', repeat($.statement), '}'),

    statement: $ => choice(
      $.expression,
      $.let_binding,
      $.constant_definition
    ),

    // Variable Binding
    let_binding: $ => seq(
      'let',
      choice(
        seq($.identifier, ':', $.type_annotation, '=', $.expression),
        seq($.identifier, '=', $.expression),
        seq($.destructure_pattern, '=', $.expression)
      )
    ),

    destructure_pattern: $ => choice(
      $.tuple_destructure,
      $.struct_destructure,
      $.list_destructure
    ),

    tuple_destructure: $ => seq(
      '(',
      $.identifier,
      repeat(seq(',', $.identifier)),
      optional(','),
      ')'
    ),

    struct_destructure: $ => seq(
      $.type_identifier,
      '{',
      $.identifier,
      repeat(seq(',', $.identifier)),
      optional(','),
      '}'
    ),

    list_destructure: $ => seq(
      '[',
      $.identifier,
      repeat(seq(',', $.identifier)),
      optional(seq(',', '..', $.identifier)),
      optional(','),
      ']'
    ),

    // Constants
    constant_definition: $ => seq(
      repeat($.attribute),
      'const',
      $.type_identifier,
      ':',
      $.type_annotation,
      '=',
      $.expression
    ),

    // Aliases
    identifier: $ => /[a-z_][a-zA-Z0-9_]*\??/,
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/
  }
});
