tree-sitter-outrun/test/corpus/control_flow_case_basic.txt
================
Basic case statement
================

def classify(value: Integer): String {
    case value {
        when positive?(value: value) -> "positive"
        when negative?(value: value) -> "negative" 
        else -> "unknown"
    }
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (module_path
              (type_identifier)))))
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (case_expression
                (expression
                  (primary_expression
                    (identifier)))
                (case_clause
                  (case_pattern
                    (guard_expression
                      (expression
                        (primary_expression
                          (function_call
                            (identifier)
                            (argument_list
                              (argument
                                (named_argument
                                  (identifier)
                                  (expression
                                    (primary_expression
                                      (identifier)))))))))))
                  (expression
                    (primary_expression
                      (literal
                        (string
                          (string_content))))))
                (case_clause
                  (case_pattern
                    (guard_expression
                      (expression
                        (primary_expression
                          (function_call
                            (identifier)
                            (argument_list
                              (argument
                                (named_argument
                                  (identifier)
                                  (expression
                                    (primary_expression
                                      (identifier)))))))))))
                  (expression
                    (primary_expression
                      (literal
                        (string
                          (string_content))))))
                (else_clause
                  (expression
                    (primary_expression
                      (literal
                        (string
                          (string_content))))))))))))))
